<resources>
    <string name="app_name">Cari Tour Guide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_sebagai">Login Sebagai</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="wisatawan">Wisatawan</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="daftar">Daftar</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="login_wisatawan">Login Wisatawan</string>
    <string name="login_tourguide">Login Tourguide</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="caritourguide_gmail_com">caritourguide@gmail.com</string>
    <string name="nama_anda">Nama lengkap anda</string>
    <string name="emailanda_gmail_com">emailanda@gmail.com</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukan_password">masukan password</string>
    <string name="nama_wisatawan">Nama Wisatawan</string>
    <string name="wisatawan_gmail_com">wisatawan@gmail.com</string>
    <string name="emailwisatawan_gmail_com">emailwisatawan@gmail.com</string>
    <string name="harga_tourguide">Harga Tourguide</string>
    <string name="status_pemesanan">Status Pemesanan</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="tanggal_tour">Tanggal Tour</string>
    <string name="emailtourguide_gmail_com">emailtourguide_gmail_com</string>
    <string name="surakarta">Surakarta</string>
    <string name="deskripsi_tour">Deskripsi Tour</string>
    <string name="hari_tour">Hari Tour</string>
    <string name="alamat">Alamat</string>
    <string name="umur">Umur</string>
    <string name="no_ktp">No KTP</string>
    <string name="foto_tourguide">Foto Tourguide</string>
    <string name="nama_tourguide">Nama Tourguide</string>
    <string name="no_paspor">No Paspor</string>
    <string name="kota_tour">Kota Tour</string>
    <string name="harga_tour">Harga Tour</string>
    <string name="edit_service_tour">Edit Service Tour</string>
</resources>
