<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_master"
    android:background="@drawable/background_gradient"
    tools:context=".view.activity.RegisterWisatawanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="60dp">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_caritourguide" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="Silahkan melakukan registrasi !"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/layoutRegister"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_nama_wisatawan"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/et_nama_wisatawan"
            android:drawablePadding="20dp"
            android:paddingRight="10dp"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/nama_anda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_email_wisatawan"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/et_email"
            android:drawablePadding="20dp"
            android:paddingRight="10dp"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/emailanda_gmail_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_password_wisatawan"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorBlack"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorBlack"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_password"
                android:hint="*******"
                android:layout_width="match_parent"
                android:drawablePadding="20dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_ulangi_password_wisatawan"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi_password"
            android:textColor="@color/colorBlack"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorBlack"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_ulangi_password_wisatawan"
                android:hint="*******"
                android:layout_width="match_parent"
                android:drawablePadding="20dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register_wisatawan"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient_green"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>