<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LoginTourguideFragment">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/layoutLoginTourguide"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_email_tourguide"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/et_email_tourguide"
            android:drawablePadding="20dp"
            android:paddingRight="10dp"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/caritourguide_gmail_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/tv_password_tourguide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorBlack"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorBlack"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_password_tourguide"
                android:hint="Masukan Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login_tourguide"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient_orange"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>