<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragment.LoginWisatawanFragment">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/layoutLoginWisatawan"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white_transparan"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_email_wisatawan"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorBlack"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_email_wisatawan"
                android:drawablePadding="20dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:hint="masukkan email anda"
                android:drawableRight="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:paddingTop="5dp"
            android:id="@+id/tv_password_wisatawan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorBlack"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorBlack"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_password_wisatawan"
                android:hint="@string/masukan_password"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_login_wisatawan"
                android:clickable="true"
                android:textColor="#FFF"
                android:background="@drawable/rec_gradient_green"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                android:text="@string/login"
                android:textSize="18dp"
                android:layout_marginRight="50dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_register_wisatawan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rec_gradient_blue"
                android:clickable="true"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>