<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:clickable="true"
    card_view:cardCornerRadius="5dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:id="@+id/card_view_pemesanan_tourguide"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp">

    <LinearLayout
        android:id="@+id/container_pemesanan_tourguide"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/foto3"
            android:id="@+id/foto_wisatawan"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/padding_master">

                <TextView
                    android:id="@+id/tv_nama_wisatawan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/nama_wisatawan"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/tanggal_tour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tanggal Tour"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/tv_tanggal_tour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/tanggal_tour"
                    android:textColor="@color/headings"
                    android:textSize="14sp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Status Pemesanan"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/tv_status_pemesanan_tourguide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/status_pemesanan"
                    android:textColor="@color/headings"
                    android:textSize="14sp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>