<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".EditProfilTourguideActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_master">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profil Anda"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"
            android:textAlignment="center" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foto_tourguide"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_foto_tourguide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/input_data"
                        android:textColor="#000000"
                        android:padding="12dp"
                        android:textSize="18sp" />
                    <Button
                        android:id="@+id/btn_upload_foto"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="Upload Foto"
                        android:background="@drawable/rec_gradient_grey"
                        android:textAllCaps="false"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sertifikat Tourguide"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_sertifikat_tourguide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/input_data"
                        android:textColor="#000000"
                        android:padding="12dp"
                        android:textSize="18sp" />
                    <Button
                        android:id="@+id/btn_upload_sertifikat"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="Upload File"
                        android:background="@drawable/rec_gradient_grey"
                        android:textAllCaps="false"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/et_nama_tourguide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@drawable/input_data"
                    android:text="@string/nama_tourguide"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nomor Telepon"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/et_notelp_tourguide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@drawable/input_data"
                    android:text="082138972462"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/et_alamat_tourguide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@drawable/input_data"
                    android:text="Wonogiri, Jawa Tengah, Indonesia"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jenis Kelamin"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb_lakilaki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="Laki-Laki"/>
                    <RadioButton
                        android:id="@+id/rb_perempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Perempuan"/>
                </RadioGroup>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/umur"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/et_umur_tourguide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@drawable/input_data"
                    android:text="20"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_ktp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/et_ktp_tourguide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@drawable/input_data"
                    android:text="3312122708980001"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingBottom="30dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_batal"
                    android:text="Batal"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rec_gradient_warning"/>
                <Button
                    android:id="@+id/btn_simpan"
                    android:text="Simpan"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rec_gradient_green" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>